--- a/src/components/CardBase/cardbase.module.scss
+++ b/src/components/CardBase/cardbase.module.scss
@@ -4,7 +4,7 @@ $card-bg-color: #fff;
 
 .card {
   background-color: $card-bg-color;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Suit-Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   border-radius: cardem(10);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   width: cardem(200);
